Improve styling of login div, fixed issue where register had extra padding at the bottom

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,18 +32,19 @@ html, body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin-top: -10vh;
 }
 
 .main-logged-in {
-  background-color: #f0f0f0 !important; 
+  background-color: whitesmoke !important; 
   height: 100%;
 }
 
 .login-div {
   background-color: whitesmoke;
-  width: 500px;
+  width: 450px;
   padding: 60px;
-  border-radius: 15px;
+  border-radius: 12px;
 }
 
 .link-btn {
